# dySim

./: .gitignore  .gitmodules  CMakeLists.txt  Index.hpp  README.md  defineHead.h  dyMath.hpp  dyPicture.hpp  matrix.hpp  picture.hpp  pixel.hpp  taichi.h  tensor.hpp  test  test.cpp  text.cpp  tuples.hpp
.cache/clangd/index/: Index.hpp.0C9C0CAB30996CB6.idx  Index.hpp.3A0F5C2523FC749C.idx  Index.hpp.D3E2A45E663C2BD2.idx  Index.hpp.DDB06A7830330BD4.idx  Launch.hpp.976E700661F663E3.idx  _fixes.hpp.77EDA077D791D735.idx  _fixes.hpp.793172D239A00C3E.idx  _vectorize.hpp.3562D45AB828109A.idx  _vectorize.hpp.DC18C244396698E3.idx  aaRect.hpp.60E9CA5D260E4D92.idx  aabb.hpp.3F04CCCE829E9264.idx  baseClass.hpp.4717B3F3B78D2CC9.idx  box.hpp.E715A4CA2101654C.idx  bvhNode.hpp.39F0A4D501614C7E.idx  camera.h.471ABA93842CC744.idx  camera.h.E044D95E08F21AE8.idx  camera.hpp.3A36DC933C953B80.idx  common.h.2C2B449BDC670850.idx  common.h.AE01D58FF4002D10.idx  common.hpp.2151D90A0829C6EB.idx  common.hpp.4CC5B064C98BB7F5.idx  compute_common.hpp.85E196ADF08FA413.idx  compute_common.hpp.8A235EB3550DB731.idx  compute_vector_relational.hpp.445B69E8072DD31D.idx  compute_vector_relational.hpp.49F8224831F7F581.idx  constantMedium.hpp.ACA392AAB7A3868B.idx  constants.hpp.20B3C8D74BFC99CC.idx  constants.hpp.8BD96D4C5A820CC6.idx  constants.inl.12F884815DF8D4B8.idx  constants.inl.7419C13FFDE902CD.idx  cudaTest.cu.64B21BAC7435DD34.idx  cudaTest.hpp.30CB149FCCBC2372.idx  define.hpp.4B2AE7E6F3210C46.idx  define.hpp.9226135E1CA9AEF9.idx  define.hpp.D95435593B69521D.idx  dielectric.hpp.05A5836DDEBBF827.idx  diffuseLight.hpp.FAA5FBE846D8BC72.idx  dyGraphic.hpp.06022462E51A85F1.idx  dyGraphic.hpp.F996F1E6B7969EE4.idx  dyMath.hpp.32F5D3D8E7C058F9.idx  (+479 more)
.obsidian/: appearance.json  community-plugins.json  workspace
.obsidian/plugins/obsidian-style-settings/: data.json
cmake/modules/: FindcuBLAS.cmake
core/: Index.hpp  dyGraphic.hpp  dyMath.hpp  dyPicture.hpp  dyRender.hpp  dySimulator.hpp  glad.c  matrix.hpp  picture.hpp  tensor.hpp  tuples.hpp
core/math/: Index.hpp  define.hpp  dual_alg.hpp  dual_num.hpp  launch.hpp  matALG.hpp  matrix.hpp  quaternion.hpp  realALG.hpp  tensor.hpp  vecALG.hpp  vector.hpp
core/math/dual/: dual_alg.hpp  dual_alg_back.hpp  dual_num.hpp
core/math/matALG_others/: fast3x3SVD.hpp  matSVD.hpp  truncatedSVD.hpp
core/render/: baseClass.hpp  camera.hpp  hittableList.hpp  randomFun.hpp  ray.hpp  render.hpp  sphere.hpp
core/render/BVH/: aabb.hpp  bvhNode.hpp
core/render/denoise/: svgf.hpp
core/render/material/: dielectric.hpp  diffuseLight.hpp  disneryBRDF.hpp  isotropic.hpp  lambertian.hpp  metal.hpp
core/render/object/: aaRect.hpp  box.hpp  mesh.hpp  skybox.hpp  sphere.hpp  transform.hpp  triangle.hpp
core/render/pdf/: disneryBRDFpdf.hpp  pdf.hpp
core/render/renderKernel/: MIS_RR_PT.hpp  rKernel.hpp
core/render/texture/: imageTexture.hpp  solidColor.hpp  texture.hpp
core/simulator/: mls_mpm.hpp  mls_mpm2.hpp  mls_mpm3.hpp  wtf.hpp
core/src/: Index.hpp  define.hpp  launch.hpp  matALG.hpp  matrix.hpp  picture.hpp  quaternion.hpp  realALG.hpp  tensor.hpp  tuples.hpp  vecALG.hpp  vector.hpp
core/src/cuda/: cudaTest.cu  cudaTest.hpp
core/src/matALG_others/: fast3x3SVD.hpp  matSVD.hpp  matSVD3x3.hpp  traditionalSvd.hpp
core/tools/: modelLoader.hpp
core/tools/graphicAlg/: marchingCube.hpp
core/tools/renderTools/: Camera.hpp  frameBuffer.hpp  modelLoader.hpp  shaderLoader.hpp  texture.hpp  textureRegister.hpp  uniformBuffer.hpp
docs/: CNAME  README.md  _config.yml  index.md  jekyll-rtd-theme.gemspec
docs/DyGraph/: README.md  gui.md  guiSam.md
docs/DyMath/: README.md  dyindex.md  index.md  matrix.md  method.md  tensor.md  vector.md
docs/DyMath_/: README.md  tensor.md
docs/DyPicture/: pic.md  picPro.md  readOrw.md
docs/DyRender/: README.md
docs/DySimulator/: README.md  vector.md
docs/Introduction/: README.md  ainstall.md
docs/_includes/: toc-date.html
docs/_layouts/: default.html
docs/_pages/: ainstallBuild.md  option.md  tips.md
docs/_posts/: 2022-01-29-hello dySim.md  2022-01-30-vector.md  2022-01-31-matrix.md  2022-02-03-tensor.md  2022-02-05-picture.md  2022-05-25-dyMath.md  2022-05-25-dymVec.md  2022-05-26-dymMat.md  2022-05-28-dymTen.md  2022-05-30-dymquat.md  2022-06-01-dymPic.md  2022-06-02-dymGui.md  2022-06-03-dymRender.md
docs/_sass/: _typography.scss  theme.scss
docs/assets/css/: theme.min.css
docs/gitbook/: custom.css
docs/介绍/: README.md
docsOld/DyMath/: dyindex.md  vector.md
docsOld/DyPicture/: README.md  pic.md  picMethod.md
docsOld/Introduction/: ainstall.md  option.md
docsOld/_sass/: theme.scss
docs_old/: _config.yml  index.md
docs_old/gitbook/: custom.css
example/: _CMakeLists.txt  matrix.cpp  pic.cpp  pic_filter2D.cpp  tensor.cpp
includes/: update.sh
includes/glad/: glad.h
includes/learnopengl/: model.h  shader.h
logo/: logo.ai  logo.psd
logo/logo/: logo.ai
shader/: defalut.frag  default.vs  default2D.vs  default3D.frag  default3D.vs
src/: BDPT_try.hpp  BDPT_try_main.cpp  cudaTest_main.cpp  cudaTest_main.cu  dualNum_test_main.cpp  dyMathExample  dyMathExample.cpp  dyMathExample2_main.cpp  dyMathExample_main.cu  fun_pkg.hpp  genDesktop_main.cpp  genDestop_main.cpp  gui_pic_test_main.cpp  gui_test_main.cpp  gui_tttttt_main.cpp  marchingCube_test_main.cpp  matSvdTest_main.cpp  matrixALG_main.cpp  modelLoader_test_main.cpp  mpm2  mpm2_main.cpp  mpm_test_main.cpp  newPic.cpp  newPic_main.cpp  openglTest_main.cpp  pic_filter2D  pic_filter2D.cpp  pic_filter2D_main.cpp  quate_test_main.cpp  ren_skybox_main.cpp  rtInOneWeek_main.cpp  rt_test_main.cpp  sample1_waterBox_main.cpp  sample2_waterHit_main.cpp  sample3_threeObj_main.cpp  sample4_cornellbox_main.cpp  sample5_getGbuffer_main.cpp  sample6_denoiseTime_main.cpp  sample7_runCornellbox_main.cpp  sample8_bunny_main.cpp  (+8 more)
src/shader/: gbuffer.fs  gbuffer.vs  lightbox.fs  lightbox.vs  model_loading.fs  model_loading.vs  model_loading3tex.fs  screenbf.fs  screenbf.vs  skybox.fs  skybox.vs
tools/: CMakeLists.txt  _CMakeLists.txt  str_hash.hpp  sugar.hpp
(+47 files in other folders)
